--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -1,11 +1,12 @@
-{"version": 5,
+{"version": 6,
  "packagesDir": "lake-packages",
  "packages":
  [{"git":
    {"url": "https://github.com/KislyjKisel/lean-pod",
     "subDir?": null,
-    "rev": "33afb26d93dc5329f5b624a9bf1cb7681cc4d2e7",
+    "rev": "c1bcf9277cf62fe91a2d77ee405791726f63d348",
     "opts": {},
     "name": "pod",
     "inputRev?": "main",
-    "inherited": false}}]}
+    "inherited": false}}],
+ "name": "yoga"}
